修改網頁 與 更新 README.md

--- a/blog/views/_layouts/home.html
+++ b/blog/views/_layouts/home.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>{{block 'title'}}默认标题{{/block}}</title>
+  <title>{{block 'title'}}默認標題{{/block}}</title>
   <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.css">
   {{block 'head'}}{{/block}}
 </head>
