--- a/blog/views/_partials/header.html
+++ b/blog/views/_partials/header.html
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
       </button>
       <a class="navbar-brand" href="/">
-        <img width="90px" src="/public/img/logo3.png" alt="">
+        <div>【 部落格 】</div>
       </a>
     </div>
     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -37,22 +37,22 @@
       </form>
       <ul class="nav navbar-nav navbar-right">
         {{ if user }}
-        <a class="btn btn-default navbar-btn" href="/topics/new">发起</a>
+        <a class="btn btn-default navbar-btn" href="/topics/new">發表文章</a>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img width="20" height="20" src="../public/img/avatar-max-img.png" alt=""> <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li class="dropdown-current-user">
-              当前登录用户: {{ user.nickname }}
+              當前用戶: {{ user.nickname }}
             </li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">个人主页</a></li>
-            <li><a href="/settings/profile">设置</a></li>
+            <li><a href="#">個人首頁</a></li>
+            <li><a href="/settings/profile">設置</a></li>
             <li><a href="/logout">退出</a></li>
           </ul>
         </li>
         {{ else }}
-        <a class="btn btn-primary navbar-btn" href="/login">登录</a>
-        <a class="btn btn-success navbar-btn" href="/register">注册</a>
+        <a class="btn btn-primary navbar-btn" href="/login">登入</a>
+        <a class="btn btn-success navbar-btn" href="/register">註冊</a>
         {{ /if }}
       </ul>
     </div>
