--- a/blog/views/index.html
+++ b/blog/views/index.html
@@ -1,6 +1,6 @@
 {{extend './_layouts/home.html'}}
 
-{{block 'title'}}{{'多人博客 - 首页'}}{{/block}}
+{{block 'title'}}{{'部落格 - 首頁'}}{{/block}}
 
 {{block 'body'}}
 <section class="container">
@@ -13,7 +13,7 @@
       </div>
       <div class="media-body">
         <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
-        <p>sueysok 回复了问题 • 2 人关注 • 1 个回复 • 187 次浏览 • 2017-10-20 13:45</p>
+        <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次浏览 • 2017-10-20 13:45</p>
       </div>
     </li>
     <li class="media">
@@ -24,7 +24,7 @@
       </div>
       <div class="media-body">
         <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
-        <p>sueysok 回复了问题 • 2 人关注 • 1 个回复 • 187 次浏览 • 2017-10-20 13:45</p>
+        <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次浏览 • 2017-10-20 13:45</p>
       </div>
     </li>
     <li class="media">
@@ -35,7 +35,7 @@
       </div>
       <div class="media-body">
         <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
-        <p>sueysok 回复了问题 • 2 人关注 • 1 个回复 • 187 次浏览 • 2017-10-20 13:45</p>
+        <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次浏览 • 2017-10-20 13:45</p>
       </div>
     </li>
     <li class="media">
@@ -46,7 +46,7 @@
       </div>
       <div class="media-body">
         <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
-        <p>sueysok 回复了问题 • 2 人关注 • 1 个回复 • 187 次浏览 • 2017-10-20 13:45</p>
+        <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
     <li class="media">
@@ -57,7 +57,7 @@
       </div>
       <div class="media-body">
         <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
-        <p>sueysok 回复了问题 • 2 人关注 • 1 个回复 • 187 次浏览 • 2017-10-20 13:45</p>
+        <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
     <li class="media">
@@ -68,7 +68,7 @@
       </div>
       <div class="media-body">
         <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
-        <p>sueysok 回复了问题 • 2 人关注 • 1 个回复 • 187 次浏览 • 2017-10-20 13:45</p>
+        <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
     <li class="media">
@@ -79,7 +79,7 @@
       </div>
       <div class="media-body">
         <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
-        <p>sueysok 回复了问题 • 2 人关注 • 1 个回复 • 187 次浏览 • 2017-10-20 13:45</p>
+        <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
     <li class="media">
@@ -90,7 +90,7 @@
       </div>
       <div class="media-body">
         <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
-        <p>sueysok 回复了问题 • 2 人关注 • 1 个回复 • 187 次浏览 • 2017-10-20 13:45</p>
+        <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
     <li class="media">
@@ -101,7 +101,7 @@
       </div>
       <div class="media-body">
         <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
-        <p>sueysok 回复了问题 • 2 人关注 • 1 个回复 • 187 次浏览 • 2017-10-20 13:45</p>
+        <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
     <li class="media">
@@ -112,7 +112,7 @@
       </div>
       <div class="media-body">
         <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
-        <p>sueysok 回复了问题 • 2 人关注 • 1 个回复 • 187 次浏览 • 2017-10-20 13:45</p>
+        <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
     <li class="media">
@@ -123,7 +123,7 @@
       </div>
       <div class="media-body">
         <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
-        <p>sueysok 回复了问题 • 2 人关注 • 1 个回复 • 187 次浏览 • 2017-10-20 13:45</p>
+        <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
     <li class="media">
@@ -134,7 +134,7 @@
       </div>
       <div class="media-body">
         <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
-        <p>sueysok 回复了问题 • 2 人关注 • 1 个回复 • 187 次浏览 • 2017-10-20 13:45</p>
+        <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
     <li class="media">
@@ -145,7 +145,7 @@
       </div>
       <div class="media-body">
         <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
-        <p>sueysok 回复了问题 • 2 人关注 • 1 个回复 • 187 次浏览 • 2017-10-20 13:45</p>
+        <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
     <li class="media">
@@ -156,7 +156,7 @@
       </div>
       <div class="media-body">
         <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
-        <p>sueysok 回复了问题 • 2 人关注 • 1 个回复 • 187 次浏览 • 2017-10-20 13:45</p>
+        <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
     <li class="media">
@@ -167,7 +167,7 @@
       </div>
       <div class="media-body">
         <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
-        <p>sueysok 回复了问题 • 2 人关注 • 1 个回复 • 187 次浏览 • 2017-10-20 13:45</p>
+        <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
     <li class="media">
@@ -178,7 +178,7 @@
       </div>
       <div class="media-body">
         <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
-        <p>sueysok 回复了问题 • 2 人关注 • 1 个回复 • 187 次浏览 • 2017-10-20 13:45</p>
+        <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
     <li class="media">
@@ -189,7 +189,7 @@
       </div>
       <div class="media-body">
         <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
-        <p>sueysok 回复了问题 • 2 人关注 • 1 个回复 • 187 次浏览 • 2017-10-20 13:45</p>
+        <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
     <li class="media">
@@ -200,7 +200,7 @@
       </div>
       <div class="media-body">
         <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
-        <p>sueysok 回复了问题 • 2 人关注 • 1 个回复 • 187 次浏览 • 2017-10-20 13:45</p>
+        <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
     <li class="media">
@@ -211,7 +211,7 @@
       </div>
       <div class="media-body">
         <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
-        <p>sueysok 回复了问题 • 2 人关注 • 1 个回复 • 187 次浏览 • 2017-10-20 13:45</p>
+        <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
     <li class="media">
@@ -222,7 +222,7 @@
       </div>
       <div class="media-body">
         <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
-        <p>sueysok 回复了问题 • 2 人关注 • 1 个回复 • 187 次浏览 • 2017-10-20 13:45</p>
+        <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
   </ul>
