--- a/blog/views/topic/show.html
+++ b/blog/views/topic/show.html
@@ -1,6 +1,6 @@
 {{extend '../_layouts/home.html'}}
 
-{{block 'title'}}{{'多人博客 - 首页'}}{{/block}}
+{{block 'title'}}{{'部落格 - 首頁'}}{{/block}}
 
 {{block 'head'}}
 <link rel="stylesheet" href="/public/css/markdown-github.css">
@@ -112,10 +112,10 @@
       <hr>
       <form>
         <div class="form-group">
-          <label for="exampleInputPassword1">添加回复</label>
+          <label for="exampleInputPassword1">新增評論</label>
           <textarea class="form-control" name="" id="" cols="10" rows="10"></textarea>
         </div>
-        <button type="submit" class="btn btn-success">回复</button>
+        <button type="submit" class="btn btn-success">送出</button>
       </form>
     </div>
   </div>
