--- a/blog/views/topic/new.html
+++ b/blog/views/topic/new.html
@@ -1,6 +1,6 @@
 {{extend '../_layouts/home.html'}}
 
-{{block 'title'}}{{'多人博客 - 首页'}}{{/block}}
+{{block 'title'}}{{'部落格 - 首頁'}}{{/block}}
 
 {{block 'body'}}
 <section class="container">
@@ -8,23 +8,23 @@
     <div class="col-md-5">
       <form>
         <div class="form-group">
-          <label for="exampleInputEmail1">选择板块</label>
+          <label for="">選擇板塊</label>
           <select class="form-control">
             <option>分享</option>
-            <option>问答</option>
-            <option>招聘</option>
-            <option>客户端测试</option>
+            <option>問答</option>
+            <option>招才</option>
+            <option>客戶端測試</option>
           </select>
         </div>
         <div class="form-group">
-          <label for="exampleInputEmail1">标题</label>
-          <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
+          <label for="">標題</label>
+          <input type="text" class="form-control" id="" placeholder="">
         </div>
         <div class="form-group">
-          <label for="exampleInputPassword1">内容</label>
+          <label for="">文章内容</label>
           <textarea class="form-control" rows="3"></textarea>
         </div>
-        <button type="submit" class="btn btn-default">Submit</button>
+        <button type="submit" class="btn btn-default">提交</button>
       </form>
     </div>
   </div>
