修改網頁 與 更新 README.md

--- a/blog/views/index.html
+++ b/blog/views/index.html
@@ -12,7 +12,7 @@
           </a>
       </div>
       <div class="media-body">
-        <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
+        <h4 class="media-heading"><a href="#">Media heading</a></h4>
         <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次浏览 • 2017-10-20 13:45</p>
       </div>
     </li>
@@ -23,7 +23,7 @@
           </a>
       </div>
       <div class="media-body">
-        <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
+        <h4 class="media-heading"><a href="#">Media heading</a></h4>
         <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次浏览 • 2017-10-20 13:45</p>
       </div>
     </li>
@@ -34,7 +34,7 @@
           </a>
       </div>
       <div class="media-body">
-        <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
+        <h4 class="media-heading"><a href="#">Media heading</a></h4>
         <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次浏览 • 2017-10-20 13:45</p>
       </div>
     </li>
@@ -45,7 +45,7 @@
           </a>
       </div>
       <div class="media-body">
-        <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
+        <h4 class="media-heading"><a href="#">Media heading</a></h4>
         <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
@@ -56,7 +56,7 @@
           </a>
       </div>
       <div class="media-body">
-        <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
+        <h4 class="media-heading"><a href="#">Media heading</a></h4>
         <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
@@ -67,7 +67,7 @@
           </a>
       </div>
       <div class="media-body">
-        <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
+        <h4 class="media-heading"><a href="#">Media heading</a></h4>
         <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
@@ -78,7 +78,7 @@
           </a>
       </div>
       <div class="media-body">
-        <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
+        <h4 class="media-heading"><a href="#">Media heading</a></h4>
         <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
@@ -89,7 +89,7 @@
           </a>
       </div>
       <div class="media-body">
-        <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
+        <h4 class="media-heading"><a href="#">Media heading</a></h4>
         <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
@@ -100,7 +100,7 @@
           </a>
       </div>
       <div class="media-body">
-        <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
+        <h4 class="media-heading"><a href="#">Media heading</a></h4>
         <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
@@ -111,7 +111,7 @@
           </a>
       </div>
       <div class="media-body">
-        <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
+        <h4 class="media-heading"><a href="#">Media heading</a></h4>
         <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
@@ -122,7 +122,7 @@
           </a>
       </div>
       <div class="media-body">
-        <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
+        <h4 class="media-heading"><a href="#">Media heading</a></h4>
         <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
@@ -133,7 +133,7 @@
           </a>
       </div>
       <div class="media-body">
-        <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
+        <h4 class="media-heading"><a href="#">Media heading</a></h4>
         <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
@@ -144,7 +144,7 @@
           </a>
       </div>
       <div class="media-body">
-        <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
+        <h4 class="media-heading"><a href="#">Media heading</a></h4>
         <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
@@ -155,7 +155,7 @@
           </a>
       </div>
       <div class="media-body">
-        <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
+        <h4 class="media-heading"><a href="#">Media heading</a></h4>
         <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
@@ -166,7 +166,7 @@
           </a>
       </div>
       <div class="media-body">
-        <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
+        <h4 class="media-heading"><a href="#">Media heading</a></h4>
         <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
@@ -177,7 +177,7 @@
           </a>
       </div>
       <div class="media-body">
-        <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
+        <h4 class="media-heading"><a href="#">Media heading</a></h4>
         <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
@@ -188,7 +188,7 @@
           </a>
       </div>
       <div class="media-body">
-        <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
+        <h4 class="media-heading"><a href="#">Media heading</a></h4>
         <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
@@ -199,7 +199,7 @@
           </a>
       </div>
       <div class="media-body">
-        <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
+        <h4 class="media-heading"><a href="#">Media heading</a></h4>
         <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
@@ -210,7 +210,7 @@
           </a>
       </div>
       <div class="media-body">
-        <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
+        <h4 class="media-heading"><a href="#">Media heading</a></h4>
         <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
@@ -221,7 +221,7 @@
           </a>
       </div>
       <div class="media-body">
-        <h4 class="media-heading"><a href="/topics/123">Media heading</a></h4>
+        <h4 class="media-heading"><a href="#">Media heading</a></h4>
         <p>sueysok 回應了此問題 • 2 人關注中 • 1 則回覆 • 187 次瀏覽 • 2017-10-20 13:45</p>
       </div>
     </li>
