--- a/blog/views/_partials/header.html
+++ b/blog/views/_partials/header.html
@@ -37,16 +37,15 @@
       </form>
       <ul class="nav navbar-nav navbar-right">
         {{ if user }}
-        <a class="btn btn-default navbar-btn" href="/topics/new">發表文章</a>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><img width="20" height="20" src="../public/img/avatar-max-img.png" alt=""> <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li class="dropdown-current-user">
-              當前用戶: {{ user.nickname }}
+              <a href="#">當前用戶: {{ user.nickname }}</a>
             </li>
             <li role="separator" class="divider"></li>
             <li><a href="#">個人首頁</a></li>
-            <li><a href="/settings/profile">設置</a></li>
+            <li><a href="#">設置</a></li>
             <li><a href="/logout">退出</a></li>
           </ul>
         </li>
